# axum-web

./: .gitignore  Cargo.toml  README.md  application.toml
src/: lib.rs  main.rs
src/login/: login.rs  mod.rs
src/paths/: mod.rs  path.rs
src/redis/: connection.rs  mod.rs
src/token/: token.rs
src/web/: configuration.rs  connection.rs  datasource.rs  mod.rs  result.rs  server.rs
src/web/database/: mod.rs
src/web/database_handle/: mod.rs
src/web/jsons/: user.rs
src/web/login/: login.rs
src/web/paths/: mod.rs  path.rs
src/web/security/: check_token.rs  mod.rs  token.rs
src/web/upload/: mod.rs  upload.rs
