[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"
author =  ["jon"]
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
axum ={version="0.6",features=["multipart"]}
serde = { version = "1.0.14", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
uuid = {version="1",features=["fast-rng","v4","macro-diagnostics"]}
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
jsonwebtoken = "8"
http-body = "0.4"
redis = "0.22"
toml = "0.5"
bincode = "1.3.3"
time={version="0.3",features=["macros"]}
derivative = "2.2.0"
mysql = { version = "23", default-features = false, features = ["minimal", "rustls-tls"] }
mysql_common = "0.29.2"
# [dependencies.uuid]
# version = "1.2.2"
# features = [
#     "v4",                # Lets you generate random UUIDs
#     "fast-rng",          # Use a faster (but still sufficiently random) RNG
#     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
# ]
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"